Repaint when background switches painting from/to scrolling contents layer.

BUG=639886
TEST=paint/invalidation/composited-overflow-local-background-removed.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2266103002
Cr-Commit-Position: refs/heads/master@{#414571}

Former-commit-id: 7f4aaf6e67cb051586ab6f028bfed6411b1893a3